Fix overflow bug

--- a/src/Home.css
+++ b/src/Home.css
@@ -25,7 +25,7 @@
   justify-content: space-around;
   align-items: center;
   align-content: center;
-  overflow: scroll;
+  overflow: hidden;
 }
 
 .Content {
